Grease Pencil - Stroke end points incorrect behavior #88769

Closed
opened 2021-06-03 02:16:11 +02:00 by Benjamin Round · 3 comments

System Information
Operating system: Windows 10
Graphics card: r9 380x

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8, type: release
build date: 2021-06-02, 11:34:30
Worked: None

Short description of error
Stroke endpoints after closing don't behave normally using smooth operation in sculpt mode

Exact steps for others to reproduce the error

  1. Add a grease pencil blank
  2. Draw a circle freehand
  3. Go into edit mode and select endpoints of the rudimentary circle
  4. Press F to close the circle's gap
  5. Go into Sculpt Mode and select Smooth operation
  6. Smooth grease pencil stroke to smooth circle

Observed Result
The two endpoints that were closed in step 4 are now showing a sharp crease after using smooth operation

Expected Result
Smooth operation spreading points out evenly across stroke including the supposed endpoints which shouldn't really exist anymore.

NOTE
The same result can be found by using a grease pencil circle tool and then using smooth sculpt function

BlendFile: Smooth operation Grease pencil.blend

**System Information** Operating system: Windows 10 Graphics card: r9 380x **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b806, type: release build date: 2021-06-02, 11:34:30 Worked: None **Short description of error** Stroke endpoints after closing don't behave normally using smooth operation in sculpt mode **Exact steps for others to reproduce the error** 1. Add a grease pencil blank 2. Draw a circle freehand 3. Go into edit mode and select endpoints of the rudimentary circle 4. Press F to close the circle's gap 5. Go into Sculpt Mode and select Smooth operation 6. Smooth grease pencil stroke to smooth circle **Observed Result** The two endpoints that were closed in step 4 are now showing a sharp crease after using smooth operation **Expected Result** Smooth operation spreading points out evenly across stroke including the supposed endpoints which shouldn't really exist anymore. **NOTE** The same result can be found by using a grease pencil circle tool and then using smooth sculpt function BlendFile: [Smooth operation Grease pencil.blend](https://archive.blender.org/developer/F10155158/Smooth_operation_Grease_pencil.blend)
Author

Added subscriber: @Benjamin-Round

Added subscriber: @Benjamin-Round

This issue was referenced by a50a51eef0

This issue was referenced by a50a51eef00a4a8e756bf5846d64fd863dedcae6
Antonio Vazquez self-assigned this 2021-06-23 17:27:36 +02:00

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88769
No description provided.